--- a/wp-content/themes/store/assets/css/style-custom.css
+++ b/wp-content/themes/store/assets/css/style-custom.css
@@ -4476,3 +4476,13 @@ img.mfp-img {
 .collection-cus-description {
     color: #8d4120;
     font-size: 16px; }
+
+.grid-container {
+    grid-template-rows: auto auto auto auto;
+    grid-template-columns: auto auto auto auto;
+    display: grid;
+}
+.grid-item-3 {
+    grid-area: 1/3/3/5;
+}
+.grid-item-4 {grid-area: 2/1/5/3;}
